# vulkan_learn

./: .gitignore  .gitmodules  CMakeLists.txt  build.py  lfs.yaml
cmake/: WriteShaderBank.cmake  textualResourceManager.cmake
create_device/: CMakeLists.txt  create_device.cpp
docs/: memory_model.html  modern_gpu_command_buffer.html  notes.css  vulkan_synchronization.html
framework/: CMakeLists.txt  pipeline_resource.cpp  pipeline_resource.h
framework/pipelines/: pipeline_unary_operation.cpp  pipeline_unary_operation.h  reduce_operation.cpp  reduce_operation.h
framework/pipelines/shaders/: reduce.comp  u8_to_f32.comp  u8c1_to_u8c4.comp
hello_triangle/: CMakeLists.txt  hello_triangle.cpp  sample_utils.cpp  sample_utils.h
image_processing_toys/: CMakeLists.txt  access_euroc_dataset.cpp  euroc_io.h  image_processing_toys.cpp  sample_utils.cpp  sample_utils.h
image_processing_toys/shaders/: gray_f32_to_rgba_u8.comp  gray_u8_harris_cornerness.comp  gray_u8_to_f32.comp  imshow.frag  imshow.vert  show_coordination.comp  test.comp  wave.comp
model_loading/: CMakeLists.txt  model_loading.cpp  sample_utils.cpp  sample_utils.h
simple_compute/: CMakeLists.txt  main.cpp  simple_compute.cpp
simple_compute/shaders/: test.comp
src/: create_device.cpp
synchronization/: CMakeLists.txt  sample_utils.h  sync_between_queues.cpp  sync_within_a_queue.cpp  synchronization.cpp
synchronization/shaders/: init_buffer.comp  times_two.comp
tests/: CMakeLists.txt  test_main.cpp
tests/shaders/: basic.comp
utils/: CMakeLists.txt  assets_manager.h.in  event_manager.cpp  event_manager.h  geometries.hpp  gltf_utils.cpp  gltf_utils.h  logging.h  math.cpp  math.hpp  resource_manager.h  resource_manager_binarize.cpp.in  resource_manager_static.cpp.in  shader_bank.h.in  shaders.cpp  shaders.hpp  utils.cpp  utils.hpp
vector_crash_android/: CMakeLists.txt  debug.sh  vector_crash_android.cpp
